@@ -67,6 +67,7 @@ static int test_standard_methods(void)
     const EVP_PKEY_ASN1_METHOD **tmp;
     int last_pkey_id = -1;
     size_t i;
+    int ok = 1;
 
     for (tmp = standard_methods, i = 0; i < OSSL_NELEM(standard_methods);
          i++, tmp++) {
@@ -75,11 +76,28 @@ static int test_standard_methods(void)
             break;
         }
         last_pkey_id = (*tmp)->pkey_id;
+
+        /*
+         * One of the following must be true:
+         *
+         * pem_str == NULL AND ASN1_PKEY_ALIAS is set
+         * pem_str != NULL AND ASN1_PKEY_ALIAS is clear
+         *
+         * Anything else is an error and may lead to a corrupt ASN1 method table
+         */
+        if (!TEST_true((*tmp)->pem_str == NULL &&
+                       ((*tmp)->pkey_flags & ASN1_PKEY_ALIAS) != 0)
+            && !TEST_true((*tmp)->pem_str != NULL &&
+                          ((*tmp)->pkey_flags & ASN1_PKEY_ALIAS) == 0)) {
+            TEST_note("asn1 standard methods: Index %zu, pkey ID %d, Name=%s",
+                      i, (*tmp)->pkey_id, OBJ_nid2sn((*tmp)->pkey_id));
+            ok = 0;
+        }
     }
 
     if (TEST_int_ne(last_pkey_id, 0)) {
         TEST_info("asn1 standard methods: Table order OK");
-        return 1;
+        return ok;
     }
 
     TEST_note("asn1 standard methods: out of order");
