@@ -9,6 +9,11 @@
 
  Changes between 1.1.0h and 1.1.1 [xx XXX xxxx]
 
+  *) Make EVP_PKEY_asn1_new() a bit stricter about its input.  A NULL pem_str
+     parameter is no longer accepted, as it leads to a corrupt table.  NULL
+     pem_str is reserved for alias entries only.
+     [Richard Levitte]
+
   *) Use the new ec_scalar_mul_ladder scaffold to implement a specialized ladder
      step for prime curves. The new implementation is based on formulae from
      differential addition-and-doubling in homogeneous projective coordinates
